<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_top_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/top_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/bt_on" >
            </ImageView>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_footer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="20dp"
            android:text="@string/footer_text_1" >
        </TextView>

        <TextView
            android:id="@+id/tv_footer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="@string/connect_sample"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="monospace" >
        </TextView>

        <TextView
            android:id="@+id/tv_footer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_text_3"
            android:visibility="gone" >
        </TextView>
    </LinearLayout>

</ScrollView>